Fixed concurrency bug in GameManager